WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41065
[Qt] tst_QWebFrame::callQtInvokable() fails
https://bugs.webkit.org/show_bug.cgi?id=41065
Summary
[Qt] tst_QWebFrame::callQtInvokable() fails
Jędrzej Nowacki
Reported
2010-06-23 06:51:22 PDT
The autotest fails on my computer. Checked against git-svn-id:
http://svn.webkit.org/repository/webkit/trunk@61683
268f45cc-cd09-0410-ab3c-d52691b4dbfc FAIL! : tst_QWebFrame::callQtInvokable() Compared values are not the same Actual (vmap.keys().size()): 0 Expected (2): 2 Loc: [/home/nierob/dev/WebKit-script/WebKit/qt/tests/qwebframe/tst_qwebframe.cpp(1275)]
Attachments
Proposed patch
(1.46 KB, patch)
2010-07-18 20:30 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2010-07-18 20:27:15 PDT
Regression caused by <
http://trac.webkit.org/changeset/61478
> (the change to WebCore/bridge/qt/qt_runtime.cpp) I don't see why getPropertyNames() would crash in that scenario, and cannot reproduce with the two mentioned tests (world-reuse.html and didClearWindowObject.html)
Andreas Kling
Comment 2
2010-07-18 20:30:59 PDT
Created
attachment 61925
[details]
Proposed patch Proposed partial revert of <
http://trac.webkit.org/changeset/61478
>
Robert Hogan
Comment 3
2010-07-19 00:48:26 PDT
(In reply to
comment #2
)
> Created an attachment (id=61925) [details] > Proposed patch > > Proposed partial revert of <
http://trac.webkit.org/changeset/61478
>
Note to self: make sure I pass the unit tests in future too. If you can't recreate that's fair enough - if I can still recreate when you revert I'll create a new bug for it. The two tests in question are already skipped.
Andreas Kling
Comment 4
2010-07-24 11:48:50 PDT
Comment on
attachment 61925
[details]
Proposed patch Clearing flags on attachment: 61925 Committed
r64011
: <
http://trac.webkit.org/changeset/64011
>
Andreas Kling
Comment 5
2010-07-24 11:49:01 PDT
All reviewed patches have been landed. Closing bug.
Simon Hausmann
Comment 6
2010-07-29 07:58:00 PDT
Revision
r64011
cherry-picked into qtwebkit-2.1 with commit f1ec6bfb720b632660b49880cc088084bb15175c
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug