WebCore/bridge/qt/qt_runtime.cpp
@@ -338,8 +338,7 @@ QVariant convertValueToQVariant(ExecState* exec, JSValue value, QMetaType::Type 
             if (type == Object || type == Array || type == RTArray) {
                 // Enumerate the contents of the object
                 PropertyNameArray properties(exec);
-                if (properties.size() > 0)
-                    object->getPropertyNames(exec, properties);
+                object->getPropertyNames(exec, properties);
                 PropertyNameArray::const_iterator it = properties.begin();
 
                 QVariantMap result;
